multi-input text classification as task id instead of category

--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -130,7 +130,8 @@
             "sentiment-scoring",
             "sentiment-analysis",
             "hate-speech-detection",
-            "text-scoring"
+            "text-scoring",
+            "multi-input-text-classification"
         ]
     },
     "text-generation": {
