Address more comments

--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -77,8 +77,7 @@
         "subtasks": [
             "extractive-qa",
             "open-domain-qa",
-            "closed-domain-qa",
-            "visual-question-answering",
+            "closed-domain-qa"
         ]
     },
     "sentence-similarity": {
