--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -33,7 +33,7 @@
     title: Process image data
   - local: stream
     title: Stream
-  - local: pytorch
+  - local: use_with_pytorch
     title: Use with PyTorch
   - local: share
     title: Share
