[Docs] How to use with PyTorch page (#4474)
* start adding how to use with pytorch docs

* add optimize section

* add to toc

* mention parallelism in streaming mode

* more details

* rename

* Apply suggestions from code review

Co-authored-by: Steven Liu <59462357+stevhliu@users.noreply.github.com>

* comments

* minor

Co-authored-by: Steven Liu <59462357+stevhliu@users.noreply.github.com>

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -33,6 +33,8 @@
     title: Process image data
   - local: stream
     title: Stream
+  - local: use_with_pytorch
+    title: Use with PyTorch
   - local: share
     title: Share
   - local: dataset_script
