--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -50,10 +50,14 @@
       title: Beam Datasets
     title: "General usage"
   - sections:
+    - local: audio_load
+      title: Load audio data
     - local: audio_process
       title: Process audio data
     title: "Audio"
   - sections:
+    - local: image_load
+      title: Load image data
     - local: image_process
       title: Process image data
     title: "Vision"
