📝 add use tf/torch to toctree

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -30,6 +30,10 @@
       title: Process
     - local: stream
       title: Stream
+    - local: use_with_tensorflow
+      title: Use with TensorFlow
+    - local: use_with_pytorch
+      title: Use with PyTorch
     - local: share
       title: Share
     - local: dataset_script
