--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install .[tests]
+                pip install .[tests] -vvv
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow --upgrade
             - run: |
@@ -72,7 +72,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install .[tests]
+                pip install .[tests] -vvv
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow==6.0.0
             - run: |
@@ -100,8 +100,5 @@ workflows:
     version: 2
     build_and_test:
         jobs:
-            - check_code_quality
-            - run_dataset_script_tests_pyarrow_latest
-            - run_dataset_script_tests_pyarrow_6
             - run_dataset_script_tests_pyarrow_latest_WIN
             - run_dataset_script_tests_pyarrow_6_WIN
