--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install .[tests] -vvv
+                pip install .[tests] -v
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow --upgrade
             - run: |
@@ -72,7 +72,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install .[tests] -vvv
+                pip install .[tests] -v
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow==6.0.0
             - run: |
