--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install --upgrade pip
+                pip install --upgrade pip --user
                 pip install .[tests]
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow --upgrade
@@ -73,7 +73,7 @@ jobs:
                 conda create -n py37 python=3.7 pytorch --yes
             - run: |
                 conda activate py37
-                pip install --upgrade pip
+                pip install --upgrade pip --user
                 pip install .[tests]
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow==6.0.0
