upgrade pip and setuptools in win ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
             - run: |
                 conda activate py37
                 pip install --upgrade pip --user
+                pip install --upgrade setuptools
                 pip install .[tests]
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow --upgrade
@@ -74,6 +75,7 @@ jobs:
             - run: |
                 conda activate py37
                 pip install --upgrade pip --user
+                pip install --upgrade setuptools
                 pip install .[tests]
                 pip install -r additional-tests-requirements.txt --no-deps
                 pip install pyarrow==6.0.0
