--- a/.github/workflows/test-audio.yml
+++ b/.github/workflows/test-audio.yml
@@ -27,4 +27,4 @@ jobs:
           pip install pyarrow --upgrade
       - name: Test audio with pytest
         run: |
-          HF_SCRIPTS_VERSION=master python -m pytest -n 2 -sv ./tests/features/test_audio.py
+          HF_SCRIPTS_VERSION=main python -m pytest -n 2 -sv ./tests/features/test_audio.py
