--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
       - main
   push:
 
+env:
+  HF_SCRIPTS_VERSION: main
+  HF_ALLOW_CODE_EVAL: 1
+
 jobs:
   test_with_pyarrow_latest:
     runs-on: ubuntu-latest
@@ -28,7 +32,7 @@ jobs:
           pip install pyarrow --upgrade
       - name: Test with pytest
         run: |
-          HF_SCRIPTS_VERSION=main HF_ALLOW_CODE_EVAL=1 python -m pytest -n 2 --dist loadfile -sv ./tests/
+          python -m pytest -n 2 --dist loadfile -sv ./tests/
   test_with_pyarrow_6:
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +54,7 @@ jobs:
           pip install pyarrow==6.0.0
       - name: Test with pytest
         run: |
-          HF_SCRIPTS_VERSION=main HF_ALLOW_CODE_EVAL=1 python -m pytest -n 2 --dist loadfile -sv ./tests/
+          python -m pytest -n 2 --dist loadfile -sv ./tests/
   test_on_windows_with_pyarrow_latest:
     runs-on: windows-latest
     steps:
@@ -68,4 +72,4 @@ jobs:
           pip install pyarrow --upgrade
       - name: Test with pytest
         run: |
-          HF_SCRIPTS_VERSION=main HF_ALLOW_CODE_EVAL=1 python -m pytest -n 2 --dist loadfile -sv ./tests/
+          python -m pytest -n 2 --dist loadfile -sv ./tests/
