Use strategy for OS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,13 @@ env:
 
 jobs:
   test_with_pyarrow_latest:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Install OS dependencies
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           sudo apt-get -y update
           sudo apt-get -y install libsndfile1-dev
@@ -55,24 +59,24 @@ jobs:
       - name: Test with pytest
         run: |
           python -m pytest -n 2 --dist loadfile -sv ./tests/
-  test_on_windows_with_pyarrow_latest:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.6"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
-          pip install .[tests]
-          pip install -r additional-tests-requirements.txt --no-deps
-          pip install pyarrow --upgrade
-      - name: Test with pytest
-        run: |
-          python -m pytest -n 2 --dist loadfile -sv ./tests/
+#  test_on_windows_with_pyarrow_latest:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: "3.6"
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
+#          pip install .[tests]
+#          pip install -r additional-tests-requirements.txt --no-deps
+#          pip install pyarrow --upgrade
+#      - name: Test with pytest
+#        run: |
+#          python -m pytest -n 2 --dist loadfile -sv ./tests/
   test_on_windows_with_pyarrow_6:
     runs-on: windows-latest
     steps:
