--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,11 @@ env:
   HF_ALLOW_CODE_EVAL: 1
 
 jobs:
-  test_with_pyarrow_latest:
+  test:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+        pyarrow_version: [latest, 6.0.1]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install OS dependencies
@@ -33,32 +34,37 @@ jobs:
           echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
           pip install .[tests]
           pip install -r additional-tests-requirements.txt --no-deps
-          pip install pyarrow --upgrade
+      - name: Install latest PyArrow
+        if: ${{ matrix.pyarrow_version == 'latest' }}
+        run: pip install pyarrow --upgrade
+      - name: Install PyArrow ${{ matrix.pyarrow_version }}
+        if: ${{ matrix.pyarrow_version != 'latest' }}
+        run: pip install pyarrow==${{ matrix.pyarrow_version }}
       - name: Test with pytest
         run: |
           python -m pytest -n 2 --dist loadfile -sv ./tests/
-  test_with_pyarrow_6:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install OS dependencies
-        run: |
-          sudo apt-get -y update
-          sudo apt-get -y install libsndfile1-dev
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.6"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
-          pip install .[tests]
-          pip install -r additional-tests-requirements.txt --no-deps
-          pip install pyarrow==6.0.0
-      - name: Test with pytest
-        run: |
-          python -m pytest -n 2 --dist loadfile -sv ./tests/
+#  test_with_pyarrow_6:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Install OS dependencies
+#        run: |
+#          sudo apt-get -y update
+#          sudo apt-get -y install libsndfile1-dev
+#      - uses: actions/checkout@v3
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: "3.6"
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
+#          pip install .[tests]
+#          pip install -r additional-tests-requirements.txt --no-deps
+#          pip install pyarrow==6.0.0
+#      - name: Test with pytest
+#        run: |
+#          python -m pytest -n 2 --dist loadfile -sv ./tests/
 #  test_on_windows_with_pyarrow_latest:
 #    runs-on: windows-latest
 #    steps:
@@ -77,21 +83,21 @@ jobs:
 #      - name: Test with pytest
 #        run: |
 #          python -m pytest -n 2 --dist loadfile -sv ./tests/
-  test_on_windows_with_pyarrow_6:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.6"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
-          pip install .[tests]
-          pip install -r additional-tests-requirements.txt --no-deps
-          pip install pyarrow==6.0.0
-      - name: Test with pytest
-        run: |
-          python -m pytest -n 2 --dist loadfile -sv ./tests/
+#  test_on_windows_with_pyarrow_6:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: "3.6"
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
+#          pip install .[tests]
+#          pip install -r additional-tests-requirements.txt --no-deps
+#          pip install pyarrow==6.0.0
+#      - name: Test with pytest
+#        run: |
+#          python -m pytest -n 2 --dist loadfile -sv ./tests/
