--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -6,7 +6,8 @@
             "speaker-identification",
             "audio-intent-classification",
             "audio-emotion-recognition",
-            "audio-language-identification"
+            "audio-language-identification",
+            "pronunciation-scoring"
         ]
     },
     "audio-to-audio": {
