--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,14 +44,23 @@ jobs:
           sudo apt-get -y update
           sudo apt-get -y install libsndfile1-dev
       - uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Set up Python 3.6
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.6"
+          python-version: 3.6
+      - name: Set up Python 3.7
+        if: ${{ matrix.os == 'windows-latest' }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.7
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+      - name: Pin setuptools-scm
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          echo "installing pinned version of setuptools-scm to fix seqeval installation on 3.6" && pip install "setuptools-scm==6.4.2"
           pip install .[tests]
           pip install -r additional-tests-requirements.txt --no-deps
       - name: Install latest PyArrow
