--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           sudo apt-get -y update
-          sudo apt-get -y install libsndfile1-dev
+          sudo apt-get -y install libsndfile1
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
