Register unit/integration markers

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,8 @@ exclude =
     src/datasets/metrics
 per-file-ignores =
     metrics/*:F401
+
+[pytest]
+markers =
+    unit: unit test
+    integration: integration test
