Fix pytest config section name

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ exclude =
 per-file-ignores =
     metrics/*:F401
 
-[pytest]
+[tool:pytest]
 markers =
     unit: unit test
     integration: integration test
