--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -56,6 +56,10 @@
       title: Load image data
     - local: image_process
       title: Process image data
+    - local: image_classification
+      title: Image classification
+    - local: object_detection
+      title: Object detection
     title: "Vision"
   - sections:
     - local: nlp_load
