--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -57,7 +57,7 @@
     - local: image_process
       title: Process image data
     - local: image_dataset_script
-      title: Create an image dataset loading script
+      title: Create an image dataset
     - local: image_classification
       title: Image classification
     - local: object_detection
