--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -50,6 +50,8 @@
       title: Load audio data
     - local: audio_process
       title: Process audio data
+    - local: audio_dataset_script
+      title: Create an audio dataset
     title: "Audio"
   - sections:
     - local: image_load
